--- a/Sec2_9.html
+++ b/Sec2_9.html
@@ -15,10 +15,10 @@
         .box{
             background-color: green;
             text-align:center;
-            font-size:4rem;
+            font-size:2rem;
             font-weight:bold;
-            height:200px;
-            width:300px;
+            height:100px;
+            width:150px;
             border-radius:5%;
             color:white;
         }
@@ -27,20 +27,36 @@
             background-color:green;
             border:none;
             color:white;
-            font-size:4rem;
+            font-size:2rem;
             font-weight:bold;
         }
 
         #num{
-            width:900px;
-            height:200px;
+            width:450px;
+            height:100px;
             border: 4px solid black;
             border-radius:5px;
         }
 
         input{
-            font-size:5rem;
+            font-size:2.5rem;
             text-align:center;
+        }
+        @media screen and (max-width: 480px) {
+            .box {
+                font-size: 1.5rem;
+                height: 50px;
+            }
+
+            input {
+                font-size: 1.5rem;
+                height: 50px;
+                padding: 3px;
+            }
+
+            button {
+                font-size: 1.5rem;
+            }
         }
     </style>
 </head>
